--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-White HTML固定式布景
+White 混和式布景
 
-White 1.0 版(尚未釋出)
+White 1.0 版(2015-07-02 釋出)
 ==============================
 1.正式釋出
+2.預設套用 bootstrap3
