--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 White 混和式布景
 
+White 1.1 版(2016-05-13 釋出)
+==============================
+1.移除BootStrap2設定，改以BootStrap3為主
+
 White 1.0 版(2015-07-02 釋出)
 ==============================
 1.正式釋出
