加入關站畫面

--- a/README
+++ b/README
@@ -3,6 +3,8 @@ White 混和式布景
 White 1.1 版(2016-05-13 釋出)
 ==============================
 1.移除BootStrap2設定，改以BootStrap3為主
+2.加入關站畫面
+
 
 White 1.0 版(2015-07-02 釋出)
 ==============================
