--- a/README
+++ b/README
@@ -1,5 +1,11 @@
 White 混和式布景
 
+White 1.3 版(2016-06-16 釋出)
+==============================
+1.簡化模組樣板
+2.簡化語系
+
+
 White 1.2 版(2016-06-06 釋出)
 ==============================
 1.修正網站關閉畫面
