--- a/README
+++ b/README
@@ -1,5 +1,10 @@
 White 混和式布景
 
+White 1.4 版(2016-06-18 釋出)
+==============================
+1.修正評論無法正常呈現的問題
+
+
 White 1.3 版(2016-06-16 釋出)
 ==============================
 1.簡化模組樣板
