將 col-md 改為 col-sm

--- a/README
+++ b/README
@@ -1,5 +1,11 @@
 White 混和式布景
 
+White 1.5 (2017-01-07 釋出)
+==============================
+1.將RWD調整成1024下才運作
+2.完整支援XOOPS 2.5.8
+
+
 White 1.4 版(2016-06-18 釋出)
 ==============================
 1.修正評論無法正常呈現的問題
