--- a/README
+++ b/README
@@ -1,5 +1,10 @@
 White 混和式布景
 
+White 1.6 (2017-04-18 釋出)
+==============================
+1.將樣板檔改為 tpl
+
+
 White 1.5 (2017-01-07 釋出)
 ==============================
 1.將RWD調整成1024下才運作
