--- a/README
+++ b/README
@@ -1,5 +1,11 @@
 White 混和式布景
 
+White 1.7 (2017-06-16 釋出)
+==============================
+1.支援無障礙 2.0
+2.支援XOOPS 2.5.9
+
+
 White 1.6 (2017-04-18 釋出)
 ==============================
 1.將樣板檔改為 tpl
